# benchmark

./: .gitignore  CMakeLists.txt  README.en.md  README.md  bug_test.py  dataset.py  mnist_mq.py  prepare_venv.sh  test.sh
.devcontainer/: devcontainer.json
.github/workflows/: env.yaml
benchmark/: __init__.py  config.json
benchmark/qft_qaoa/: __init__.py  mq_4_regular_model.py  mq_qft.py  qulacs_4_regular_model.py  qulacs_qft.py
benchmark/src/: __init__.py  analysis.py  benchmark.py  generate_run_file.py
benchmark/task_preparation/: __init__.py  generate_mol.py  intel_random_circuit.py  intel_random_ham.py  mq_2_regular_model.py  mq_4_regular_model.py  mq_jw.py  mq_random_circuit.py  mq_random_ham.py  paddle_2_regular_model.py  paddle_4_regular_model.py  paddle_random_circuit.py  paddle_random_ham.py  qiskit_random_circuit.py  qiskit_random_ham.py  qpanda_4_regular_model.py  qpanda_random_circuit.py  qpanda_random_ham.py  random_ham.py  (+17 more)
ccsrc/: quest_test.cpp
env_scripts/: common_functions.sh  install_benchmark_lib.sh  install_intel_qs.sh  install_mindquantum.sh  install_other_requirements.sh  install_paddlequantum.sh  install_pyqpanda.sh  install_qiskit.sh  install_quest.sh  install_qulacs.sh  install_tensorcircuit.sh  install_tfq.sh  locate_python3.sh  parse_framework.sh  pip_url.sh  python_virtualenv_activate.sh
qft_qaoa/: benchmark_amd.toml  benchmark_kp.toml  benchmark_pc.toml  generate_run_script.py  omp128_amd.sh  omp128_kp.json  omp128_kp.sh  omp128_kp.txt  omp16_kp.json  omp16_kp.sh  omp16_kp.txt  omp16_pc.json  omp16_pc.sh  omp16_pc.txt  omp16_server.sh  omp24_amd.sh  omp24_kp.json  omp24_kp.sh  omp24_kp.txt
tasks/: 01.json  01.txt  02.json  02.txt  analysis.py  benchmark.toml  benchmark_ci.toml  benchmark_single_gate.toml  generate_run_script.py  generate_run_scripy.py  intrin.json  qcmb.ipynb  res.json  run_benchmark.sh  single_gate.json  virtualization.ipynb  结果分析.xlsx
(+43 files in other folders)
