cmake_minimum_required(VERSION 3.15 FATAL_ERROR)

project(benchmark)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
if(DEBUG)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
    MESSAGE(STATUS "DEBUG MODE")
endif()
set(ThirdPartyPath ${PROJECT_SOURCE_DIR}/third_party)
set(VenvPath ${PROJECT_SOURCE_DIR}/venv)
find_package(pybind11)
option(OUTPUT_DIR "pybind11 so output dir" ${PROJECT_SOURCE_DIR}/benchmark)

# QuEST
LINK_DIRECTORIES(${VenvPath}/lib)
pybind11_add_module(quest_test ${PROJECT_SOURCE_DIR}/ccsrc/quest_test.cpp)
target_include_directories(quest_test PUBLIC ${ThirdPartyPath}/QuEST/QuEST/include)
target_link_libraries(quest_test PUBLIC -lQuEST)
set_target_properties(quest_test PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${OUTPUT_DIR})

if(NOT UNABLE_GPU)
    pybind11_add_module(quest_test_gpu ${PROJECT_SOURCE_DIR}/ccsrc/quest_test.cpp)
    target_compile_definitions(quest_test_gpu PUBLIC ENABLE_GPU)
    target_include_directories(quest_test_gpu PUBLIC ${ThirdPartyPath}/QuEST/QuEST/include)
    target_link_libraries(quest_test_gpu PUBLIC -lQuEST_GPU)
    set_target_properties(quest_test_gpu PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${OUTPUT_DIR})
endif()
